--- a/prjWanderlust/public/style.css
+++ b/prjWanderlust/public/style.css
@@ -20,9 +20,10 @@ h1 {
 h3 {
   font-family: Work Sans;
   font-weight: 500;
+  text-align: center;
   line-height: 1.29;
   color: #27c19e;
-  padding-left: 5px
+  padding: 20px 10px 10px 10px;
 }
 
 p {
@@ -32,11 +33,14 @@ p {
   line-height: 1.36;
   text-align: left;
   color: #4a4a4a;
-  padding-left: 5px;
+  padding-left: 15px;
 }
 
 img {
-  margin-top: 20px;
+  margin-top: 15px;
+   display: block;
+   margin-left: auto;
+   margin-right: auto;
 }
 
 form {
@@ -70,20 +74,20 @@ footer {
 }
 
 .weather {
-  width: 200px;
-  height: 300px;
+  width: 170px;
+  height: 200px;
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
 }
 
 .weathericon {
-  width: 100px;
-  height: 100px;
-  position: center;
+  width: 75px;
+  height: 75px;
+  text-align: center;
 }
 
 .venue {
   width: 275px;
-  height: 500px;
+  height: 400px;
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
 }
 
@@ -94,9 +98,9 @@ footer {
 
 #venues h2 {
   font-family: Work Sans;
-  font-size: 22px;
+  font-size: 20px;
   font-weight: 600;
-  line-height: 0.77;
+  line-height: 0.85;
   text-align: center;
   padding-top: 5px;
 }
